samples/_failures_safe/1761785921_e652e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a40916f8.c: In function ‘main’:
./samples/SAFE/__tmp_a40916f8.c:153:13: error: expected declaration or statement at end of input
  153 |             mat2.rows = read_int("Enter rows for matrix 2 (1-10): ", 1, MAX_SIZE);
      |             ^~~~
./samples/SAFE/__tmp_a40916f8.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a40916f8.c:153:13: error: expected declaration or statement at end of input
